What a parrot does

--- a/Usage.ipynb
+++ b/Usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6b88b4bc-a5c4-436d-9eed-8e95600f6d53",
    "metadata": {
     "editable": true,
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "738a52e3-faf1-4f92-8835-fed5b5e36dfe",
    "metadata": {
     "editable": true,
@@ -32,15 +32,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "hi\n"
+      "Hello i am Parrot\n",
+      "Parrot says what you just said!\n",
+      "Parrot like to drink orange juice!\n",
+      "Parrot only eats vegetables!\n",
+      "Parrot flies when he wants to!\n",
+      "Parrot looks beautiful!\n",
+      "Parrot counts up to 100!\n"
      ]
     }
    ],
    "source": [
-    "x = Animal()\n",
-    "x.talk()"
+    "x = Animal(\"Parrot.\")\n",
+    "x.talk()\n",
+    "x.drink()\n",
+    "x.eat()\n",
+    "x.fly()\n",
+    "x.look()\n",
+    "x.counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "804d3883-e5be-4c41-b53b-61b2d5aacf44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "056c8d9a-3e8e-42b8-9f0b-c21ca2c5b679",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -59,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
